# jaylang

./: .gitignore  dune-project  jay.opam
benchmark/smt/: .gitignore
benchmark/smt/.cache/clangd/index/: ffi_empty_impl.c.A8EE62C92905656E.idx
benchmark/smt/ffi/: ffi_empty.ml  ffi_empty_impl.c
benchmark/smt/z3/: bench_z3.ml  dune
bluejay-language/: .gitignore  index.md  markdown-examples.md  package-lock.json  package.json  wrangler.jsonc
bluejay-language/.vitepress/: config.mts
bluejay-language/docs/: index.md
bluejay-language/docs/implementation/: smt.md  z3.md
docs/: index.md
docs/implementation/: index.md  smt.md
docs/language/: index.md
docs/spec/: index.md
src/concolic/: driver.ml
src/overlays/: blue3.ml  typed_z3.ml
src/smt/: arithmetic.ml  bench.csv  bench.ml  bench_analysis.py  binop.ml  boolean.ml  diff.ml  difference.ml  dune  formula.ml  formula_2.ml  lucky.ml  model.ml  sat.ml  solution.ml  splits.ml  symbol.ml  theory.ml
src/smt/tests/: README.md  bellman_ford.ml  bellman_ford.py  bench.ml  bench_analysis.py  bench_analyze.py  check.csv  check.ml  check_analyze.py  ct.sql  dbg.ml  dune  results.csv
src/utils/: time.ml  uf.ml
test/bjy/interp-ill-typed/: interp_typed4.bjy
test/bjy/oopsla-26-well-typed/: mu_hkt.bjy
test/bjy/sato-bjy-ill-typed/: concat.bjy
