
(library
 (name smt)
 (public_name jay.smt)
 (libraries
  core
  preface
  z3
  utils
  )
 (modules :standard \ formula_2 bench)
 (synopsis "SMT module for the Jaylang project")
 (inline_tests)
 (instrumentation (backend landmarks --auto))
 (instrumentation (backend bisect_ppx))
 (preprocess (pps ppx_compare ocaml-monadic)))

(library
 (name formula_2)
 (public_name jay.smt.formula_2)
 (modules formula_2)
 (libraries core preface z3 utils smt)
 (preprocess (pps ppx_compare ocaml-monadic))
)

(executable
 (name bench)
 (public_name jay.smt.bench)
 (modules bench)
 (libraries core preface z3 utils smt formula_2)
 (preprocess (pps ppx_compare ocaml-monadic))
)

